# human-gastruloid-analysis

./: .gitignore  Makefile  README.md  activate-venv  pyproject.toml
notebooks/: README.md  data-tour.ipynb  data_tour.ipynb  mesoderm.ipynb
src/2d_gastruloid_analysis/: __init__.py  data_registry.yaml  knn.py  utils.py
src/2d_gastruloid_analysis/models/: __init__.py
src/2d_gastruloid_analysis/models/20260224_SCVI_plan1_heemskerk_liang_amanda_42-96h_750hvg_20260224-082215_lr1e-05_lv30_hd128_ly1_dr0.1_nb/: model.pt
src/human_gastruloid_analysis/: __init__.py  data_registry.yaml  knn.py
